--- a/courflix2.0/agregados.html
+++ b/courflix2.0/agregados.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 
 <head>
     <title>Courflix</title>
@@ -11,7 +11,7 @@
 
 <body>
     <div class="imagen-superior">
-        <img class="img-1" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/black-summer-background.jpg">
+        <img class="img-1" src="assets-tp/black-summer-background.jpg">
         <div class="descripcion">
             <div class="descripcion-detallada-titulo"> 
               <p class="titulo-descripcion">ORIGINAL DE COURFLIX</p>
@@ -34,22 +34,22 @@
     </div>
     <nav class="barra-superior">
         <nav class="courflix ">
-            <img  class="courflix-1" src="../courflix2.0/assets-tp/logo.png" >
+            <img  class="courflix-1" src="assets-tp/logo.png" >
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="file:///home/valentina/courflix2.0/index.html">Inicio</a>
+            <a  class= "style-a" href="index.html">Inicio</a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="../courflix2.0/series.html">Series</a>
+            <a  class= "style-a" href="series.html">Series</a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="../courflix2.0/peliculas.html">Peliculas</a>
+            <a  class= "style-a" href="peliculas.html">Peliculas</a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="../courflix2.0/agregados.html">Agregados Recientemente </a>
+            <a  class= "style-a" href="agregados.html">Agregados Recientemente </a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="../courflix2.0/milista.html">Mi lista </a>
+            <a  class= "style-a" href="milista.html">Mi lista </a>
         </nav>
         <nav class="barra-superior-2">
             <nav class="style-barra-2">
@@ -72,25 +72,25 @@
     <div class="barra-popular">
 
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-popular" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-popular" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-popular" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-popular" src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-continuarviendo">
@@ -100,31 +100,31 @@
 
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+                src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+                src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+                src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+                src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+                src="assets-tp/preview-4.jpg">
         </div>
     </div>
     <div class="titulo-barra-tendencias">
@@ -134,31 +134,31 @@
 
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+                src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+                src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+                src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+                src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+                src="assets-tp/preview-14.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-thriller">
@@ -167,25 +167,25 @@
     <div class="barra-thriller">
 
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-thriller" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-thriller" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-thriller" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-thriller" src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-dramas">
@@ -194,25 +194,25 @@
     <div class="barra-dramas">
 
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-dramas" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-dramas" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-dramas" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-dramas" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-dramas" src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-dramas" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-dramas" src="assets-tp/preview-13.jpg">
         </div>
     </div>
 </body>
