--- a/courflix2.0/index.html
+++ b/courflix2.0/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="imagen-superior">
-        <img class="img-1" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/black-summer-background.jpg">
+        <img class="img-1" src="assets-tp/black-summer-background.jpg">
         <div class="descripcion">
             <div class="descripcion-detallada-titulo"> 
               <p class="titulo-descripcion">ORIGINAL DE COURFLIX</p>
@@ -34,10 +34,10 @@
     </div>
     <nav class="barra-superior">
         <nav class="courflix ">
-            <img  class="courflix-1" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/logo.png" >
+            <img  class="courflix-1" src="assets-tp/logo.png" >
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="file:///home/valentina/courflix2.0/index.html">Inicio</a>
+            <a  class= "style-a" href="index.html">Inicio</a>
         </nav>
         <nav class="style-barra">
             <a  class= "style-a" href="series.html">Series</a>
@@ -72,25 +72,25 @@
     <div class="barra-series">
 
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-series" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-series" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-series" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-series" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-series" src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-series" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-series">
-            <img class="img-series" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-series" src="assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-continuarviendo">
@@ -100,31 +100,31 @@
  
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+                src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+                src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+                src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+                src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+                src="assets-tp/preview-4.jpg">
         </div>
     </div>
     <div class="titulo-barra-tendencias">
@@ -134,31 +134,31 @@
 
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+                src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+                src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+                src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+                src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+                src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+                src="assets-tp/preview-14.jpg">
         </div>
     </div>
 </body>
