--- a/courflix2.0/series.html
+++ b/courflix2.0/series.html
@@ -11,13 +11,15 @@
 
 <body>
     <div class="imagen-superior">
-        <img class="img-1" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/black-summer-background.jpg">
+        <img class="img-1"
+            src="assets-tp/black-summer-background.jpg">
         <div class="descripcion">
-            <div class="descripcion-detallada-titulo"> 
-              <p class="titulo-descripcion">ORIGINAL DE COURFLIX</p>
-              <div class="contenedor-titulos">
-                  <p class="titulo-descripcion-detalada"> BLACK </p> 
-                <p class="titulo-descripcion-detalada-2"> SUMMER </p></div>
+            <div class="descripcion-detallada-titulo">
+                <p class="titulo-descripcion">ORIGINAL DE COURFLIX</p>
+                <div class="contenedor-titulos">
+                    <p class="titulo-descripcion-detalada"> BLACK </p>
+                    <p class="titulo-descripcion-detalada-2"> SUMMER </p>
+                </div>
             </div>
             <div class="descripcion-botones">
                 <span class="boton-reproducir"> <i class="fas fa-play"></i>Reproducir</span>
@@ -28,35 +30,35 @@
                 <br>
                 sin refugio seguro ni personas confiables, solo queda
                 <br>
-                 sobrevivir.
+                sobrevivir.
             </div>
         </div>
     </div>
     <nav class="barra-superior">
         <nav class="courflix ">
-            <img  class="courflix-1" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/logo.png" >
+            <img class="courflix-1" src="assets-tp/logo.png">
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="file:///home/valentina/courflix2.0/index.html">Inicio</a>
+            <a class="style-a" href="index.html">Inicio</a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="#">Series</a>
+            <a class="style-a" href="series.html">Series</a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="#">Peliculas</a>
+            <a class="style-a" href="peliculas.html">Peliculas</a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="#">Agregados Recientemente </a>
+            <a class="style-a" href="agregados.html">Agregados Recientemente </a>
         </nav>
         <nav class="style-barra">
-            <a  class= "style-a" href="#">Mi lista </a>
+            <a class="style-a" href="milista.html">Mi lista </a>
         </nav>
         <nav class="barra-superior-2">
             <nav class="style-barra-2">
                 <i class="fas fa-search"></i>
             </nav>
             <nav class="style-barra-2">
-                <a class= "style-a" href="">Niños</a>
+                <a class="style-a" href="">Niños</a>
             </nav>
             <nav class="style-barra-2">
                 <i class="fas fa-bell"></i>
@@ -65,32 +67,32 @@
             </nav>
         </nav>
     </nav>
-   
+
     <div class="caja-titulo-barra-popular">
         <p class="titulo-barra-popular">Popular en courflix</p>
     </div>
     <div class="barra-popular">
 
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-continuarviendo">
@@ -99,32 +101,25 @@
     <div class="barra-continuarviendo">
 
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-18.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
         </div>
     </div>
     <div class="titulo-barra-tendencias">
@@ -133,32 +128,25 @@
     <div class="barra-tendencias">
 
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-1.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-18.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-11.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-thriller">
@@ -167,25 +155,25 @@
     <div class="barra-thriller">
 
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-18.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-dramas">
@@ -194,27 +182,27 @@
     <div class="barra-dramas">
 
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-14.jpg">
+            <img class="img-dramas" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-12.jpg">
+            <img class="img-dramas" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-dramas" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-8.jpg">
+            <img class="img-dramas" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-4.jpg">
+            <img class="img-dramas" src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-dramas" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-dramas">
-            <img class="img-dramas" src="file:///home/valentina/courflix/imagenes/assets-tp/assets-tp/preview-13.jpg">
+            <img class="img-dramas" src="assets-tp/preview-13.jpg">
         </div>
     </div>
 </body>
- 
+
 </html>
