--- a/courflix2.0/index.html
+++ b/courflix2.0/index.html
@@ -34,7 +34,7 @@
     </div>
     <nav class="barra-superior">
         <nav class="courflix ">
-            <img  class="courflix-1" src="assets-tp/logo.png" >
+            <img  class="courflix-1" src="assets-tp/logo.png" src="index.html" >
         </nav>
         <nav class="style-barra">
             <a  class= "style-a" href="index.html">Inicio</a>
@@ -99,32 +99,25 @@
     <div class="barra-continuarviendo">
  
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-11.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-14.jpg">
+            <img class="img-continuarviendo"src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-12.jpg">
+            <img class="img-continuarviendo"src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo"src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-8.jpg">
+            <img class="img-continuarviendo"src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo"
-                src="assets-tp/preview-4.jpg">
+            <img class="img-continuarviendo"src="assets-tp/preview-4.jpg">
         </div>
     </div>
     <div class="titulo-barra-tendencias">
@@ -133,32 +126,25 @@
     <div class="barra-tendencias">
 
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-11.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-13.jpg">
+            <img class="img-tendencias"src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-4.jpg">
+            <img class="img-tendencias"src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-13.jpg">
+            <img class="img-tendencias"src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-8.jpg">
+            <img class="img-tendencias"src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-11.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias"
-                src="assets-tp/preview-14.jpg">
+            <img class="img-tendencias"src="assets-tp/preview-14.jpg">
         </div>
     </div>
 </body>
