--- a/courflix2.0/milista.html
+++ b/courflix2.0/milista.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="imagen-superior">
+   <div class="imagen-superior">
         <img class="img-1" src="assets-tp/black-summer-background.jpg">
         <div class="descripcion">
             <div class="descripcion-detallada-titulo"> 
@@ -66,31 +66,33 @@
         </nav>
     </nav>
    
-    <div class="caja-titulo-barra-popular">
-        <p class="titulo-barra-popular">Popular en courflix</p>
-    </div>
-    <div class="barra-popular">
-
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-14.jpg">
+    <div class="caja-total-popular">
+        <div class="caja-titulo-barra-popular">
+            <p class="titulo-barra-popular">Popular en courflix</p>
         </div>
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-12.jpg">
-        </div>
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-13.jpg">
-        </div>
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-8.jpg">
-        </div>
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-4.jpg">
-        </div>
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-13.jpg">
-        </div>
-        <div class="caja-img-popular">
-            <img class="img-popular" src="assets-tp/preview-13.jpg">
+        <div class="barra-popular">
+    
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-14.jpg">
+            </div>
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-12.jpg">
+            </div>
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-13.jpg">
+            </div>
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-8.jpg">
+            </div>
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-4.jpg">
+            </div>
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-13.jpg">
+            </div>
+            <div class="caja-img-popular">
+                <img class="img-popular" src="assets-tp/preview-13.jpg">
+            </div>
         </div>
     </div>
     <div class="caja-titulo-barra-continuarviendo">
