--- a/courflix2.0/series.html
+++ b/courflix2.0/series.html
@@ -74,25 +74,25 @@
     <div class="barra-popular">
 
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
+            <img class="img-popular" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-12.jpg">
+            <img class="img-popular" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-8.jpg">
+            <img class="img-popular" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-4.jpg">
+            <img class="img-popular" src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-popular">
-            <img class="img-popular" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-popular" src="assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-continuarviendo">
@@ -101,25 +101,25 @@
     <div class="barra-continuarviendo">
 
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-12.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-18.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-continuarviendo">
-            <img class="img-continuarviendo" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
+            <img class="img-continuarviendo" src="assets-tp/preview-14.jpg">
         </div>
     </div>
     <div class="titulo-barra-tendencias">
@@ -128,25 +128,25 @@
     <div class="barra-tendencias">
 
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-11.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-1.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-1.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-18.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-11.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
-            <img class="img-tendencias" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-tendencias" src="assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-thriller">
@@ -155,25 +155,25 @@
     <div class="barra-thriller">
 
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-14.jpg">
+            <img class="img-thriller" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-12.jpg">
+            <img class="img-thriller" src="assets-tp/preview-12.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-18.jpg">
+            <img class="img-thriller" src="assets-tp/preview-14.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-4.jpg">
+            <img class="img-thriller" src="assets-tp/preview-4.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="assets-tp/preview-13.jpg">
         </div>
         <div class="caja-img-thriller">
-            <img class="img-thriller" src="../courflix3.0/courflix2.0/assets-tp/preview-13.jpg">
+            <img class="img-thriller" src="assets-tp/preview-13.jpg">
         </div>
     </div>
     <div class="caja-titulo-barra-dramas">
