--- a/courflix2.0/index.html
+++ b/courflix2.0/index.html
@@ -32,9 +32,9 @@
             </div>
         </div>
     </div>
-    <nav class="barra-superior">
+    <nav class="barra-superior">  
         <nav class="courflix ">
-            <img  class="courflix-1" src="assets-tp/logo.png" src="index.html" >
+            <a href="index.html"><img  class="courflix-1" src="assets-tp/logo.png"></a>
         </nav>
         <nav class="style-barra">
             <a  class= "style-a" href="index.html">Inicio</a>
@@ -62,6 +62,7 @@
                 <i class="fas fa-bell"></i>
             </nav>
             <nav class="style-barra-2 lista">
+                    <i class="fas fa-caret-down"></i>
             </nav>
         </nav>
     </nav>
