--- a/courflix2.0/series.html
+++ b/courflix2.0/series.html
@@ -64,6 +64,7 @@
                 <i class="fas fa-bell"></i>
             </nav>
             <nav class="style-barra-2 lista">
+                    <i class="fas fa-caret-down"></i>
             </nav>
         </nav>
     </nav>
