arreglos titulos indxe

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="imagen-superior">
         <img class="img-1" src="assets-tp/black-summer-background.jpg">
         <div class="descripcion">
-            <div class="descripcion-detallada-titulo"> 
+            <div class="descripcion-detallada-titulo">
               <p class="titulo-descripcion">ORIGINAL DE COURFLIX</p>
               <div class="contenedor-titulos">
-                  <p class="titulo-descripcion-detalada"> BLACK </p> 
+                  <p class="titulo-descripcion-detalada"> BLACK </p>
                 <p class="titulo-descripcion-detalada-2"> SUMMER </p></div>
             </div>
             <div class="descripcion-botones">
@@ -32,41 +32,41 @@
             </div>
         </div>
     </div>
-    <nav class="barra-superior">  
-        <nav class="courflix ">
+    <nav class="barra-superior">
+        <li class="courflix ">
             <a href="index.html"><img  class="courflix-1" src="assets-tp/logo.png"></a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a  class= "style-a" href="index.html">Inicio</a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a  class= "style-a" href="series.html">Series</a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a  class= "style-a" href="peliculas.html">Peliculas</a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a  class= "style-a" href="agregados.html">Agregados Recientemente </a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a  class= "style-a" href="milista.html">Mi lista </a>
-        </nav>
-        <nav class="barra-superior-2">
-            <nav class="style-barra-2">
+        </li>
+        <ul class="barra-superior-2">
+            <li class="style-barra-2">
                 <i class="fas fa-search"></i>
-            </nav>
-            <nav class="style-barra-2">
+            </li>
+            <li class="style-barra-2">
                 <a class= "style-a" href="">Niños</a>
-            </nav>
-            <nav class="style-barra-2">
+            </li>
+            <li class="style-barra-2">
                 <i class="fas fa-bell"></i>
-            </nav>
-            <nav class="style-barra-2 lista">
+            </li>
+            <li class="style-barra-2 lista">
                     <i class="fas fa-caret-down"></i>
-            </nav>
-        </nav>
+            </li>
+        </ul>
     </nav>
-   
+
     <div class="caja-titulo-barra-series">
         <p class="titulo-barra-series">Series</p>
     </div>
@@ -87,18 +87,18 @@
         <div class="caja-img-series">
             <img class="img-series" src="assets-tp/preview-4.jpg">
         </div>
-        <div class="caja-img-series">
+        <!-- <div class="caja-img-series">
             <img class="img-series" src="assets-tp/preview-13.jpg">
-        </div>
-        <div class="caja-img-series">
+        </div> -->
+        <!-- <div class="caja-img-series">
             <img class="img-series" src="assets-tp/preview-13.jpg">
-        </div>
+        </div> -->
     </div>
     <div class="caja-titulo-barra-continuarviendo">
         <p class="titulo-barra-continuarviendo">Continuar viendo contenido de courflix</p>
     </div>
     <div class="barra-continuarviendo">
- 
+
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo" src="assets-tp/preview-11.jpg">
         </div>
@@ -114,15 +114,15 @@
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"src="assets-tp/preview-13.jpg">
         </div>
-        <div class="caja-img-continuarviendo">
+        <!-- <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"src="assets-tp/preview-8.jpg">
         </div>
         <div class="caja-img-continuarviendo">
             <img class="img-continuarviendo"src="assets-tp/preview-4.jpg">
-        </div>
+        </div> -->
     </div>
-    <div class="titulo-barra-tendencias">
-        <p>Tendencias</p>
+    <div class="caja-titulo-barra-tendencias">
+        <p class="titulo-barra-tendencias">Tendencias</p>
     </div>
     <div class="barra-tendencias">
 
@@ -141,13 +141,13 @@
         <div class="caja-img-tendencias">
             <img class="img-tendencias"src="assets-tp/preview-8.jpg">
         </div>
-        <div class="caja-img-tendencias">
+        <!-- <div class="caja-img-tendencias">
             <img class="img-tendencias" src="assets-tp/preview-11.jpg">
         </div>
         <div class="caja-img-tendencias">
             <img class="img-tendencias"src="assets-tp/preview-14.jpg">
-        </div>
+        </div> -->
     </div>
 </body>
- 
+
 </html>
