--- a/series.html
+++ b/series.html
@@ -35,38 +35,38 @@
         </div>
     </div>
     <nav class="barra-superior">
-        <nav class="courflix ">
+        <li class="courflix ">
             <img class="courflix-1" src="assets-tp/logo.png">
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a class="style-a" href="index.html">Inicio</a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a class="style-a" href="series.html">Series</a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a class="style-a" href="peliculas.html">Peliculas</a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a class="style-a" href="agregados.html">Agregados Recientemente </a>
-        </nav>
-        <nav class="style-barra">
+        </li>
+        <li class="style-barra">
             <a class="style-a" href="milista.html">Mi lista </a>
-        </nav>
-        <nav class="barra-superior-2">
-            <nav class="style-barra-2">
+        </li>
+        <ul class="barra-superior-2">
+            <li class="style-barra-2">
                 <i class="fas fa-search"></i>
-            </nav>
-            <nav class="style-barra-2">
+            </li>
+            <li class="style-barra-2">
                 <a class="style-a" href="">Niños</a>
-            </nav>
-            <nav class="style-barra-2">
+            </li>
+            <li class="style-barra-2">
                 <i class="fas fa-bell"></i>
-            </nav>
-            <nav class="style-barra-2 lista">
+            </li>
+            <li class="style-barra-2 lista">
                     <i class="fas fa-caret-down"></i>
-            </nav>
-        </nav>
+            </li>
+        </ul>
     </nav>
 
     <div class="caja-titulo-barra-popular">
